# sawyer_robot

sawyer_description/: CMakeLists.txt
sawyer_description/convex/sawyer_ft/: PEDESTAL-ch.txt  base-ch.txt  head-ch.txt  l0-ch.txt  l1-ch.txt  l2-ch.txt  l3-ch.txt  l4-ch.txt  l5-ch.txt  l6-ch.txt
sawyer_description/convex/sawyer_mp1/: l6-ch.txt
sawyer_description/convex/sawyer_mp3/: l0-ch.txt  l1-ch.txt
sawyer_description/convex/sawyer_pv/: base-ch.txt  head-ch.txt  l0-ch.txt  l1-ch.txt  l2-ch.txt  l3-ch.txt  l4-ch.txt  l5-ch.txt  l6-ch.txt  pedestal-ch.txt
sawyer_description/rsdf/sawyer/: ee_contact.rsdf
sawyer_description/urdf/: sawyer.urdf  sawyer_collisions.urdf  sawyer_w_gripper.urdf
